--- a/slides/stack.html
+++ b/slides/stack.html
@@ -45,8 +45,12 @@ console.log(bar(7));
                 <td><div class="fragment" data-fragment-index="3"><code>y = 3</code></div></td>
                 <td>
                     <div style="position: relative;">
-                        <div style="position: absolute; top: 0; left: 0; width: 100%;" class="fragment current-visible" data-fragment-index="4">result of <code style="font-size: 29px;">foo(x*y)</code></div>
-                        <div style="position: absolute; top: 0; left: 0;" class="fragment current-visible" data-fragment-index="5">result of <code style="font-size: 29px;">foo(7*3)</code></div>
+                        <div style="position: absolute; top: 0; left: 0; width: 100%;" class="fragment current-visible" data-fragment-index="4">
+                            result of <code style="font-size: 29px;">foo(x*y)</code>
+                        </div>
+                        <div style="position: absolute; top: 0; left: 0;" class="fragment current-visible" data-fragment-index="5">
+                            result of <code style="font-size: 29px;">foo(7*3)</code>
+                        </div>
                         <span class="fragment fade-in" data-fragment-index="6">
                             <span class="fragment fade-out" data-fragment-index="13">result of <code>foo(21)</code></span>
                         </span>
@@ -55,10 +59,10 @@ console.log(bar(7));
                 </td>
             </tr>
             <tr>
-                <td>console.log</td>
+                <td><code>console.log</code></td>
                 <td>
                     <div style="position: relative;">
-                        <span class="fragment fade-out" data-fragment-index="14">result of <code>bar(7)</code></code></span>
+                        <span class="fragment fade-out" data-fragment-index="14">result of <code>bar(7)</code></span>
                         <div style="position: absolute; top: 0; left: 0;" class="fragment" data-fragment-index="14"><code>42</code></div>
                     </div>
                 </td>
